# jobber

./: .gitignore  CMakeLists.txt  LICENSE
src/: CMakeLists.txt  main.cpp  sample_task.h
src/jobber/: CMakeLists.txt  jobber.cpp  jobber.h
src/jobber/communication/: CMakeLists.txt
src/jobber/communication/hub/: hub.cpp  hub.h
src/jobber/pipeline/: collection.h  worker_driven.h
src/jobber/splitter/: linear.h  splitter.h
src/jobber/storage/: collection.h  complexity_capped.h  naive.h  storage.h
src/jobber/task/: task.h
src/jobber/worker/: local.h  worker.h
src/utils/: CMakeLists.txt  logger.cpp  logger.h  logger_2.cpp  logger_2.h  progress_bar.cpp  progress_bar.h  timer.cpp  timer.h
